kubernetes/applications/media/books/calibre-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
spec:
  selector: {}
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: calibre-web
        image: ghcr.io/bjw-s-labs/calibre-web:0.6.24@sha256:a46698bcb41c028625882ef36e3e5eab2b5c4520677ad52d3cbb004431fb21da
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: [ "ALL" ]
        ports:
          - name: http
            containerPort: 8083
        volumeMounts:
          - name: config
            mountPath: /config
          - name: media
            mountPath: /mnt/media
          - name: cache
            mountPath: /cache
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre-web-config
      - name: media
        persistentVolumeClaim:
          claimName: books-media-nfs
      - name: cache
        emptyDir: {}
