kubernetes/applications/media/books/calibre-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web
  labels:
    app.kubernetes.io/instance: calibre-web
    app.kubernetes.io/name: calibre-web
spec:
  parentRefs:
    - name: private
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - calibre.costanza.cloud
  rules:
    - backendRefs:
        - name: calibre-web
          port: 80
