kubernetes/applications/media/books/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  annotations:
    gethomepage.dev/description: Ebooks Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: calibre-web.png
    gethomepage.dev/name: Calibre-Web
spec:
  ingressClassName: cilium
  rules:
    - host: &host calibre.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  name: web
  tls:
    - hosts:
        - *host
